--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Sikander Randhawa"
 title_separator          : "-"
 name                     : &name "Sikander Randhawa"
 description              : &description "Masters student in the Algorithms lab at the University of British Columbia"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://sikander-randhawa.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sikander-randhawa.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
