--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Sikander Randhawa"
-  avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  avatar           : "sikander.jpg"
+  bio              : "Masters student in the Algorithms Lab"
   location         : "University of British Columbia"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : #"academicpages"
   google_plus      :
   keybase          :
   instagram        :
