--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Sikander Randhawa"
   avatar           : "sikander.jpg"
-  bio              : "Masters student in the Algorithms Lab"
+  bio              : "Masters student in the Algorithms Lab at UBC."
   location         : "University of British Columbia"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
