--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,12 +9,9 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+  - title: "More about me"
+    url: /about-me/
+          
   - title: "CV"
     url: /cv/
     
