--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sikander Randhawa"
-  avatar           : "sikander.jpg"
+  avatar           : "sikander.jpeg"
   bio              : "Masters student in the Algorithms Lab at UBC."
   location         : "University of British Columbia"
   employer         :
