--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Sikander Randhawa"
 title_separator          : "-"
 name                     : &name "Sikander Randhawa"
-description              : &description "Masters student in the Algorithms lab at the University of British Columbia"
+description              : &description "Masters student in the Algorithms lab at the University of British Columbia \n Email: srand@cs.ubc.ca"
 url                      : https://sikander-randhawa.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sikander-randhawa.github.io"
