--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Sikander Randhawa"
 title_separator          : "-"
 name                     : &name "Sikander Randhawa"
-description              : &description "Masters student in the Algorithms lab at the University of British Columbia \n Email: srand@cs.ubc.ca"
+description              : &description "Masters student in the Algorithms lab at the University of British Columbia."
 url                      : https://sikander-randhawa.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sikander-randhawa.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Sikander Randhawa"
   avatar           : "sikander.jpeg"
-  bio              : "Masters student in the Algorithms Lab at UBC."
+  bio              : "Masters student in the Algorithms Lab at UBC. \n Email: srand@cs.ubc.ca"
   location         : "University of British Columbia"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
