--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Sikander Randhawa"
   avatar           : "sikander.jpeg"
   bio              : "Masters student in the Algorithms Lab at UBC. \n Email: srand@cs.ubc.ca"
-  location         : "University of British Columbia"
+  location         : "Vancouver, British Columbia"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
