--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   github           : #"academicpages"
   google_plus      :
   keybase          :
-  instagram        : "https://www.instagram.com/sikanderandhawa/?hl=en"
+  instagram        : "sikanderandhawa"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
