--- a/_config.yml
+++ b/_config.yml
@@ -232,7 +232,7 @@ defaults:
       type: portfolio
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       share: true
       comment: true
   # _talks
