--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,9 @@ main:
 
   - title: "Teaching"
     url: /teaching/    
+
+  - title: "Things on my mind: my blog"
+    url: /posts/
     
   - title: "More about me"
     url: /about-me/
