--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Teaching"
     url: /teaching/    
 
-  - title: "Things on my mind: my blog"
+  - title: "Things on my mind"
     url: /posts/
     
   # - title: "More about me"
